src/test/deca/lexique/invalid/include_file_not_found.deca
// Description:
//    inclure un fichier qui n'existe pas
// Resultats:
//    rien??.decah: Nom de fichier invalide
// Historique:
//    cree le 01/01/2021
#include "rien??"
{
    println("je ne vais rien afficher");
}
